MyLang/translating/MyLangParser.java
/* Generated By:JavaCC: Do not edit this line. MyLangParser.java */
import java.util.HashSet;
import java.util.Set;
import java.util.HashMap;
import java.util.Map;

public class MyLangParser implements MyLangParserConstants {
    private static Set<String> declaredVariables = new HashSet<String>();
    private static Map<String, String> variables = new HashMap<String, String>();
    private static boolean executeBlock = true;  // Simple flag to control execution
    public static StringBuilder generatedJavaCode = new StringBuilder();
    public static StringBuilder currentJavaCodeBuffer = generatedJavaCode;

    public static void main(String[] args) throws Exception {
        java.io.FileInputStream fis = new java.io.FileInputStream("example.simp");
        MyLangParser parser = new MyLangParser(fis);
        parser.Program();

        // 印出或寫入檔案
    System.out.println("Generated Java code:\n");
    System.out.println(generatedJavaCode.toString());


    }

// ---------- GRAMMAR ----------
  static final public void Program() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WENZI:
      case CETAK:
      case EGER:
      case ULANG:
      case SURA:
      case VAR:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Statement();
    }
    jj_consume_token(0);
  }

  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WENZI:
      StringDeclaration();
      break;
    case VAR:
      Assignment();
      break;
    case EGER:
      IfStatement();
      break;
    case CETAK:
      PrintStatement();
      break;
    case ULANG:
      LoopStatement();
      break;
    case SURA:
      InputStatement();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void StringDeclaration() throws ParseException {
                            String varName; String value;
    jj_consume_token(WENZI);
    jj_consume_token(VAR);
                   varName = getToken(0).image;
    jj_consume_token(ASN);
    jj_consume_token(STRING);
                                                                 value = getToken(0).image;
    jj_consume_token(SEMI);
        if (MyLangParser.declaredVariables.contains(varName)) {
            {if (true) throw new ParseException("Variable '" + varName + "' is already declared");}
        }
        MyLangParser.declaredVariables.add(varName);
        MyLangParser.variables.put(varName, value);

        // 新增這行，把Python代碼放進 StringBuilder
        generatedJavaCode.append("String " + varName + " = " + value + ";\n");
  }

  static final public void Assignment() throws ParseException {
                     String varName; String leftVar; String rightStr;
    jj_consume_token(VAR);
            varName = getToken(0).image;
    jj_consume_token(ASN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING:
      jj_consume_token(STRING);
            rightStr = getToken(0).image;
            if (!MyLangParser.declaredVariables.contains(varName)) {
                {if (true) throw new ParseException("Variable '" + varName + "' must be declared before assignment");}
            }
            MyLangParser.variables.put(varName, rightStr);
            MyLangParser.currentJavaCodeBuffer.append(varName + " = " + rightStr + ";\n");
      break;
    case VAR:
      jj_consume_token(VAR);
                leftVar = getToken(0).image;
      jj_consume_token(PLUS);
      jj_consume_token(STRING);
                   rightStr = getToken(0).image;
            if (!MyLangParser.declaredVariables.contains(varName) || !MyLangParser.declaredVariables.contains(leftVar)) {
                {if (true) throw new ParseException("Variables must be declared before assignment");}
            }
            // 更新 runtime 值
            String oldVal = MyLangParser.variables.get(leftVar);
            if (oldVal.startsWith("\"") && oldVal.endsWith("\"")) {
                oldVal = oldVal.substring(1, oldVal.length()-1);
            }
            String newVal = "\"" + oldVal + rightStr.substring(1, rightStr.length()-1) + "\"";
            MyLangParser.variables.put(varName, newVal);

            // 產生 Java 代碼
            MyLangParser.currentJavaCodeBuffer.append(varName + " = " + leftVar + " + " + rightStr + ";\n");
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(SEMI);
  }

  static final public void IfStatement() throws ParseException {
    boolean hasStatements = false;
    boolean condition;
    boolean oldExecuteBlock;
    String tmp;

    String leftExpr = "", rightExpr = "";   // 產生 Java code 時用的
    String leftVal = "", rightVal = "";     // 實際值，用來判斷邏輯
    String op = "";
    jj_consume_token(EGER);
    jj_consume_token(LPAR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING:
      jj_consume_token(STRING);
            leftVal = getToken(0).image.substring(1, getToken(0).image.length()-1);
            leftExpr = "\"" + leftVal + "\"";
      break;
    case VAR:
      jj_consume_token(VAR);
            leftExpr = getToken(0).image;
            if (!MyLangParser.variables.containsKey(leftExpr)) {
                {if (true) throw new ParseException("Variable '" + leftExpr + "' is not initialized");}
            }
            leftVal = MyLangParser.variables.get(leftExpr);
            if (leftVal.startsWith("\"") && leftVal.endsWith("\"")) {
                leftVal = leftVal.substring(1, leftVal.length()-1);
            }
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
      jj_consume_token(EQ);
               op = "==";
      break;
    case NEQ:
      jj_consume_token(NEQ);
                  op = "!=";
      break;
    case LT:
      jj_consume_token(LT);
                 op = "<";
      break;
    case GT:
      jj_consume_token(GT);
                 op = ">";
      break;
    case LE:
      jj_consume_token(LE);
                 op = "<=";
      break;
    case GE:
      jj_consume_token(GE);
                 op = ">=";
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING:
      jj_consume_token(STRING);
            rightVal = getToken(0).image.substring(1, getToken(0).image.length()-1);
            rightExpr = "\"" + rightVal + "\"";
      break;
    case VAR:
      jj_consume_token(VAR);
            rightExpr = getToken(0).image;
            if (!MyLangParser.variables.containsKey(rightExpr)) {
                {if (true) throw new ParseException("Variable '" + rightExpr + "' is not initialized");}
            }
            rightVal = MyLangParser.variables.get(rightExpr);
            if (rightVal.startsWith("\"") && rightVal.endsWith("\"")) {
                rightVal = rightVal.substring(1, rightVal.length()-1);
            }
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(RPAR);
        // 執行實際邏輯比較
        switch(op) {
            case "==": condition = leftVal.equals(rightVal); break;
            case "!=": condition = !leftVal.equals(rightVal); break;
            case "<": condition = leftVal.compareTo(rightVal) < 0; break;
            case ">": condition = leftVal.compareTo(rightVal) > 0; break;
            case "<=": condition = leftVal.compareTo(rightVal) <= 0; break;
            case ">=": condition = leftVal.compareTo(rightVal) >= 0; break;
            default: condition = false;
        }

        // 產生 Java 程式碼
        tmp = "{\n";
        if (op.equals("==")) {
            MyLangParser.generatedJavaCode.append("if (" + leftExpr + ".equals(" + rightExpr + "))" + tmp);
        } else if (op.equals("!=")) {
            MyLangParser.generatedJavaCode.append("if (!" + leftExpr + ".equals(" + rightExpr + "))" + tmp);
        } else {
            MyLangParser.generatedJavaCode.append("if (" + leftExpr + " " + op + " " + rightExpr + ")" + tmp);
        }
    jj_consume_token(LBRA);
        hasStatements = false;
        StringBuilder ifBlockCode = new StringBuilder();
        oldExecuteBlock = executeBlock;
        executeBlock = oldExecuteBlock && condition;
        MyLangParser.currentJavaCodeBuffer = ifBlockCode;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WENZI:
      case CETAK:
      case EGER:
      case ULANG:
      case SURA:
      case VAR:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_2;
      }
      Statement();
                    hasStatements = true;
    }
    jj_consume_token(RBRA);
        if (!hasStatements) {
            {if (true) throw new ParseException("If block cannot be empty");}
        }
        executeBlock = oldExecuteBlock;
        for (String line : ifBlockCode.toString().split("\n")) {
            if (!line.trim().isEmpty()) {
                MyLangParser.generatedJavaCode.append("    " + line + "\n");
            }
        }
        MyLangParser.generatedJavaCode.append("}\n");
        MyLangParser.currentJavaCodeBuffer = MyLangParser.generatedJavaCode;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEMESE:
      jj_consume_token(NEMESE);
      jj_consume_token(LBRA);
            hasStatements = false;
            tmp = "else {\n";
            MyLangParser.generatedJavaCode.append(tmp);
            StringBuilder elseBlockCode = new StringBuilder();
            oldExecuteBlock = executeBlock;
            executeBlock = oldExecuteBlock && !condition;
            MyLangParser.currentJavaCodeBuffer = elseBlockCode;
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case WENZI:
        case CETAK:
        case EGER:
        case ULANG:
        case SURA:
        case VAR:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
        Statement();
                        hasStatements = true;
      }
      jj_consume_token(RBRA);
            if (!hasStatements) {
                {if (true) throw new ParseException("Else block cannot be empty");}
            }
            executeBlock = oldExecuteBlock;
            for (String line : elseBlockCode.toString().split("\n")) {
                if (!line.trim().isEmpty()) {
                    MyLangParser.generatedJavaCode.append("    " + line + "\n");
                }
            }

            MyLangParser.generatedJavaCode.append("}\n");
            MyLangParser.currentJavaCodeBuffer = MyLangParser.generatedJavaCode;
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
  }

  static final public void Condition() throws ParseException {
    Printable();
    CompOperator();
    Printable();
  }

  static final public void CompOperator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
      jj_consume_token(EQ);
      break;
    case NEQ:
      jj_consume_token(NEQ);
      break;
    case LT:
      jj_consume_token(LT);
      break;
    case GT:
      jj_consume_token(GT);
      break;
    case LE:
      jj_consume_token(LE);
      break;
    case GE:
      jj_consume_token(GE);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void PrintStatement() throws ParseException {
    String value;
    boolean first = true;
    jj_consume_token(CETAK);
    jj_consume_token(LPAR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING:
      jj_consume_token(STRING);
            value = getToken(0).image;
            if (!first) MyLangParser.currentJavaCodeBuffer.append("System.out.print(\", \");\n");
            MyLangParser.currentJavaCodeBuffer.append("System.out.print(" + value + ");\n");
            first = false;
      break;
    case VAR:
      jj_consume_token(VAR);
            value = getToken(0).image;
            if (!MyLangParser.variables.containsKey(value)) {
                {if (true) throw new ParseException("Variable '" + value + "' is not initialized");}
            }
            if (!first) MyLangParser.currentJavaCodeBuffer.append("System.out.print(\", \");\n");
            MyLangParser.currentJavaCodeBuffer.append("System.out.print(" + value + ");\n");
            first = false;
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRING:
        jj_consume_token(STRING);
                value = getToken(0).image;
                MyLangParser.currentJavaCodeBuffer.append("System.out.print(\", \");\n");
                MyLangParser.currentJavaCodeBuffer.append("System.out.print(" + value + ");\n");
        break;
      case VAR:
        jj_consume_token(VAR);
                value = getToken(0).image;
                if (!MyLangParser.variables.containsKey(value)) {
                    {if (true) throw new ParseException("Variable '" + value + "' is not initialized");}
                }
                MyLangParser.currentJavaCodeBuffer.append("System.out.print(\", \");\n");
                MyLangParser.currentJavaCodeBuffer.append("System.out.print(" + value + ");\n");
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(RPAR);
    jj_consume_token(SEMI);
        MyLangParser.currentJavaCodeBuffer.append("System.out.println();\n");
  }

  static final public void Printable() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING:
      jj_consume_token(STRING);
      break;
    case VAR:
      jj_consume_token(VAR);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void LoopStatement() throws ParseException {
    int count;
    boolean hasStatements = false;
    StringBuilder tempBuffer = new StringBuilder();
    boolean oldExecuteBlock;
    String tmp;
    jj_consume_token(ULANG);
    jj_consume_token(DIGIT);
        count = Integer.parseInt(getToken(0).image);
    jj_consume_token(KALI);
    jj_consume_token(LBRA);
        // 暫�?目前的執行狀態與緩衝區
        oldExecuteBlock = executeBlock;
        executeBlock = oldExecuteBlock;

        // 使用暫�? buffer 收集迴圈內的 code
        tempBuffer = new StringBuilder();
        MyLangParser.currentJavaCodeBuffer = tempBuffer;
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WENZI:
      case CETAK:
      case EGER:
      case ULANG:
      case SURA:
      case VAR:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_5;
      }
      Statement();
                    hasStatements = true;
    }
    jj_consume_token(RBRA);
        if (!hasStatements) {
            {if (true) throw new ParseException("Loop body cannot be empty");}
        }

        // 將暫�?內容寫入最終 Java code
        tmp = "{\n";
        MyLangParser.generatedJavaCode.append("for (int i = 0; i < " + count + "; i++)"+tmp);
        for (String line : tempBuffer.toString().split("\n")) {
            if (!line.trim().isEmpty()) {
                MyLangParser.generatedJavaCode.append("    " + line + "\n");
            }
        }
        tmp = "}\n";
        MyLangParser.generatedJavaCode.append(tmp);

        // 恢復狀態
        executeBlock = oldExecuteBlock;
        MyLangParser.currentJavaCodeBuffer = MyLangParser.generatedJavaCode;
  }

  static final public void InputStatement() throws ParseException {
                          String varName;
    jj_consume_token(SURA);
    jj_consume_token(VAR);
                   varName = getToken(0).image;
    jj_consume_token(SEMI);
        if (!MyLangParser.declaredVariables.contains(varName)) {
            MyLangParser.declaredVariables.add(varName);
        }

        System.out.print("Enter value for " + varName + ": ");
        java.util.Scanner scanner = new java.util.Scanner(System.in);
        String value = scanner.nextLine();
        MyLangParser.variables.put(varName, "\"" + value + "\""); // сохраняем как строку

  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public MyLangParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[15];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x10000ae0,0x10000ae0,0x14000000,0x14000000,0x3f00000,0x14000000,0x10000ae0,0x10000ae0,0x100,0x3f00000,0x14000000,0x20000,0x14000000,0x14000000,0x10000ae0,};
   }

  /** Constructor with InputStream. */
  public MyLangParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MyLangParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new MyLangParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public MyLangParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new MyLangParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public MyLangParser(MyLangParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(MyLangParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;
